@@ -210,7 +210,10 @@ Other Changes:
 
 Docking+Viewports Branch:
 
-- Fixed implicit/fallback "Debug" window from staying visible if once docked. (#9151)
+- Docking:
+  - Fixed implicit/fallback "Debug" window from staying visible if once docked. (#9151)
+  - Demo: rework 'Dockspace' demo to increase clarity and put more emphasis on the
+    basic path of simply calling `DockSpaceOverViewport()`.
 - Viewports:
   - Fixed a regression in 1.92.4 which could cause combos/popups window from
     appearing under their parent viewport if their geometry overlapped the main
